# needed-narrowing-hs

./: CHANGELOG.md  needed-narrowing-hs.cabal
src/: NeededNarrowing.hs
src/NeededNarrowing/: Parse.hs
